<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="car_assistant">Car Assistant</string>
    <string name="app_name">CarService</string>
    <string name="iflytek_app_id">5559542f</string>
    <string name="start_speak">Start Speak</string>
    <string name="cancel">Cancel</string>
    <string name="statement">语音技术由科大讯飞提供</string>
    <string name="app_name_http">CarServer</string>
    <string name="open_server">开启远程服务</string>
    <string name="change_name">更改名字</string>
    <string name="btconn">Bluetooth is conntected to %s</string>
    <string name="btdisconn">Bluetooth is disconntected</string>
    <string name="android_tip">Android/IOS</string>
    <string name="ios_tip">IOS</string>
    <string name="download_tip">APP Download, Please Scan the QR Code Below</string>
    <string name="http_title">Car Assistant</string>
    <string name="http_body">Car Assistant APP</string>
    <string name="http_download">Download</string>
    <string name="http_weixin">Please Open It in Browser</string>
    <string name="no_connection">Recorder Do Not Have a Network Connection!</string>
    <string name="adapter_off_dvrslow">External power is disconnected and will use slow mode for DVR after %1$d seconds</string>
    <string name="adapter_off">External power is disconnected and will be suspended after %1$d seconds</string>
    <string name="adapter_off_shutdown">External power is disconnected and will be shutdown after %1$d seconds</string>
    <string name="adapter_off_0">External power is disconnected and will be suspended</string>
    <string name="car_stopped_off">Car moving is not detected in past %1$d minutes and would be suspended after %2$d seconds for power saving</string>
    <string name="acc_offed_reboot">Car is power off %1$d minutes and device would be power off after %2$d seconds for power saving</string>
    <string name="sleep_dialog_title">Sleep</string>
    <string name="sleep_dialog_text">System will go to sleep</string>
    <string name="sleep_dialog_text_shutdown">System will go to shutdown</string>
    <string name="sleep_dialog_ok">Sleep Now</string>
    <string name="sleep_dialog_cancel">Cancel</string>
    <string name="reboot_dialog_title">Power Off</string>
    <string name="reboot_dialog_text">System will reboot now</string>
    <string name="reboot_dialog_ok">Power Off Now</string>
    <string name="reboot_dialog_cancel">Cancel</string>
    <string name="tip_time_h">" "</string>
    <string name="tip_time_m">" "</string>
    <string name="tip_time_right">"o'clock"</string>
    <string name="tip_insert_sdcard">Please insert SD Card</string>
    <string name="tip_collision">Shaking Video Locked</string>
    <string name="tip_video_capture">Video Capturing</string>
    <string name="tip_lock">Lock Video</string>
    <string name="tip_sdcard_full">SD card space is not enough and please manage it</string>
    <string name="voice_disabled">Voice assitant is disabled during call communication</string>
    <string name="request_bond">%1$s is requesting to bind to the device</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="now">Now</string>
    <string name="loc_from_app">Location form App</string>
    <string name="waiting_txz_init">Waiting for TXZ initial</string>
    <string name="txz_sdk_init_app_id">27f80891f612dc70e801bfce5514bf6b</string>
    <string name="txz_sdk_init_app_token">29b432ef098498d48b88c9a3042b604c3e854a51</string>
    <string name="brightness_adj">Left or right sliding to adjust brightness</string>
    <string name="dvrslow">Timelapse Record</string>
    <string name="suspend">Suspend</string>
    <string name="shutdown">Shutdown</string>
    <string name="reboot">Reboot</string>
    <string name="east">E</string>
    <string name="west">W</string>
    <string name="south">S</string>
    <string name="north">N</string>
    <string name="northeast">NE</string>
    <string name="southeast">SE</string>
    <string name="southwest">SW</string>
    <string name="northwest">NW</string>	
    <string name="ok">OK</string>
    <string name="ota_latest">Latest version installed already</string>
    <string name="ota_downloading">Downloading...</string>
    <string name="background_dl">Background downloading</string>
    <string name="ota_checking">Checking update now</string>
    <string name="ota_check_failed">Failed to check update</string>
    <string name="ota_check_failed_msg">Please check your network</string>
    <string name="ota_check_invalid_msg">Verification failed, please try again later</string>
    <string name="ota_check_succeed">New version found, download now?</string>
    <string name="ota_download_succeed">New version has been download, please install it now</string>
    <string name="ota_tips">Please make sure the power is stable</string>
    <string name="clients_ap">%1$d devices connected the hotspot</string>
    <string name="noclients_ap">No device connected the hotspot</string>
    <string name="sim_alert">Please use the valid SIM</string>
    <string name="igetit">I get it</string>
    <string name="frontCam">Front camera is working,</string>
    <string name="rearCam">Rear camera is working,</string>
    <string name="dvrStop">Video Recording stopped,</string>
    <string name="softap">SSID is ：%1$s,password is ：%2$s,</string>
    <string name="softap2">SSID is ：%1$s,</string>
    <string name="mobile">mobile network is connected,</string>
    <string name="nomobile">mobile network is disconnected,</string>
    <string name="nosim">No SIM,</string>
    <string name="nosd">No SD,</string>
    <string name="more">Please using car assist for more settings</string>
    <string name="lowvoltage">Low voltage now, device would power off now and please do not use it unless turning on the car</string>
    <string name="gps_ok">GPS location is OK</string>
    <string name="gps_error">GPS location is not OK</string>
</resources>
