<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minWidth="480.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:textColor="@android:color/white" android:layout_gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/app_name" />
    <com.car.systemfunc.CircleProgressBar android:textSize="32.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/progressbar" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginBottom="20.0dip" />
    <View android:background="#ff606060" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:background="#ff404040" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="24.0sp" android:textColor="@android:color/white" android:id="@id/cancel" android:background="@drawable/timer_dialog_btn_bg" android:padding="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        <View android:id="@id/seperator" android:background="#ff606060" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:textSize="24.0sp" android:textColor="@android:color/white" android:id="@id/ok" android:background="@drawable/timer_dialog_btn_bg" android:padding="15.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/now" android:layout_weight="1.0" />
        <View android:id="@id/vSeparator" android:background="#ff606060" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:textSize="24.0sp" android:textColor="@android:color/white" android:id="@id/btnShutdown" android:background="@drawable/timer_dialog_btn_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/shutdown" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>