<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/dialog_bg" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.car.systemfunc.ImageViewIcon android:textSize="24.0sp" android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:id="@id/suspend" android:background="@drawable/timer_dialog_btn_bg" android:paddingLeft="10.0dip" android:paddingTop="120.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="200.0dip" android:layout_height="200.0dip" android:layout_marginRight="10.0dip" android:text="@string/suspend" />
    <com.car.systemfunc.ImageViewIcon android:textSize="24.0sp" android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:id="@id/shutdown" android:background="@drawable/timer_dialog_btn_bg" android:paddingLeft="10.0dip" android:paddingTop="120.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="200.0dip" android:layout_height="200.0dip" android:layout_marginRight="10.0dip" android:text="@string/shutdown" />
    <com.car.systemfunc.ImageViewIcon android:textSize="24.0sp" android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:id="@id/reboot" android:background="@drawable/timer_dialog_btn_bg" android:paddingLeft="10.0dip" android:paddingTop="120.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="200.0dip" android:layout_height="200.0dip" android:text="@string/reboot" />
</LinearLayout>